Ensure watch areas are always shifted to the right

--- a/src/static/example_bootstrap.less
+++ b/src/static/example_bootstrap.less
@@ -340,6 +340,10 @@ label.checkbox {
   font-size: @baseFontSize - 2;
 }
 
+.topic .watch-area-list {
+  clear: right;
+}
+
 
 /* --------------------------------------------------
  * Posts
@@ -518,7 +522,7 @@ label.checkbox {
       border-left: 0;
     }
     .watch-area-list {
-      padding: 10px 10px 10px 25px; 
+      padding: 10px 10px 10px 25px;
       position: absolute;
       top: 0;
       right: 0;
